syntax = "proto3";
package groom;

message RoomRegistrationRequest{
    string room_name=1;
}

message RoomRegistrationResponse{
    int32 room_id=1;
}

service GroomS{
    rpc RegisterGroom(RoomRegistrationRequest) returns (RoomRegistrationResponse);
}


